Light/Dark Mode

--- a/public/academics.html
+++ b/public/academics.html
@@ -47,7 +47,7 @@
                <li><a href="index.html">Home</a></li>
                <li><a href="about.html">About</a></li>
                <li><a href="work.html">Work</a></li>
-               <li><a href="academics.html">Blog</a></li>
+               <li><a href="academics.html">Academic</a></li>
                <li><a href="contact.html">Contact</a></li>
             </ul>
             <!-- Social -->
@@ -162,20 +162,20 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="blog">
-                              <a href="#"><img class="img-responsive" src="images/chinese.png" alt=""></a>
+                              <img class="img-responsive" src="images/chinese.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2014</span>
-                                 <h3><a href="#">CHINESE LANGUAGE</a></h3>
+                                 <h3>CHINESE LANGUAGE</h3>
                                  <p>My passion for Chinese, I ranked first in a national Chinese language exam during my 6th grade.</p>
                               </div> 
                            </div>
                         </div>
                         <div class="col-md-12">
                            <div class="blog">
-                              <a href="#"><img class="img-responsive" src="images/plane.png" alt=""></a>
+                              <img class="img-responsive" src="images/plane.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2019</span>
-                                 <h3><a href="#">BUILDING A RC PLANE</a></h3>
+                                 <h3>BUILDING A RC PLANE</h3>
                                  <p>Built an RC Plane from styrofoam & electronics, a creation I'm proud of despite its flight struggles.</p>
                               </div> 
                            </div>
@@ -186,20 +186,20 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="blog">
-                              <a href="#"><img class="img-responsive" src="images/tuki.png" alt=""></a>
+                              <img class="img-responsive" src="images/tuki.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2017</span>
-                                 <h3><a href="#">TUKI ORGANIZING COMMITTEE</a></h3>
+                                 <h3>TUKI ORGANIZING COMMITTEE</h3>
                                  <p>A student-formed social organization aiding the needy, with my lead in marketing efforts.</p>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-12">
                            <div class="blog">
-                              <a href="#"><img class="img-responsive" src="images/speech.png" alt=""></a>
+                              <img class="img-responsive" src="images/speech.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2019</span>
-                                 <h3><a href="#">SPEECH AT IT PARK, NEPAL</a></h3>
+                                 <h3>SPEECH AT IT PARK, NEPAL</h3>
                                  <p>Got opportunity to deliver a speech on the engineering of my custom-built RC plane and drone.</p>
                               </div>
                            </div>
@@ -210,20 +210,20 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="blog">
-                              <a href="#"><img class="img-responsive" src="images/drone.png" alt=""></a>
+                              <img class="img-responsive" src="images/drone.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2018</span>
-                                 <h3><a href="#">BUILDING A DRONE</a></h3>
+                                 <h3>BUILDING A DRONE</h3>
                                  <p>Built a custom-made drone with substantial radius, showcasing hands-on engineering prowess.</p>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-12">
                            <div class="blog">
-                              <a href="#"><img class="img-responsive" src="images/logo_black.png" alt=""></a>
+                              <img class="img-responsive" src="images/logo_black.png" alt=""></a>
                              <div class="blog-text">
                                  <span class="posted_on">2019</span>
-                                 <h3><a href="#">FIRST CLIENT PROJECT</a></h3>
+                                 <h3>FIRST CLIENT PROJECT</h3>
                                  <p>Landed my first logo design client, their satisfaction with the work & the payment brought great joy.</p>
                               </div> 
                            </div>
@@ -324,7 +324,7 @@
                            <a href="https://www.github.com/suyogkad"><i class="fab fa-github"></i></a>
                         </p>
                         <!-- Copyright -->
-                        <p><a href="#">Suyog Kadariya</a></p>
+                        <p>Suyog Kadariya</a></p>
                      </div>
                   </div>
                </div>
