--- a/public/work-single.html
+++ b/public/work-single.html
@@ -244,7 +244,7 @@
                            <a href="#"><i class="fab fa-instagram"></i></a>
                            <a href="#"><i class="fab fa-dribbble"></i></a>
                         </p> -->
-                        <a class="btn btn " href="https://github.com/suyogkad/Quiz-and-Dice-Roller---Android-App" target="_blank">View Project</a>
+                        <a class="btn btn " href="https://drive.google.com/drive/folders/1XgIKjpm73ak0HU3G7x7lG7VeKD_bVy27?usp=sharing" target="_blank">View Project</a>
                      </div>
                </div>
             </div>
