--- a/public/light/work.html
+++ b/public/light/work.html
@@ -1,7 +1,7 @@
-<!-- work.html  26 Nov 2019 03:53:59 GMT -->
 <!DOCTYPE HTML>
 <html lang="en">
    
+<!-- work.html  26 Nov 2019 03:55:04 GMT -->
 <head>
       <!--Meta Tags-->
       <meta charset="utf-8">
@@ -45,11 +45,11 @@
          <div class="js-fullheight table">
             <div class="table-cell js-fullheight">
                <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="work.html">Work</a></li>
-                  <li><a href="academics.html">Academic</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="./index.html">Home</a></li>
+                  <li><a href="./about.html">About</a></li>
+                  <li><a href="./work.html">Work</a></li>
+                  <li><a href="./academics.html">Academic</a></li>
+                  <li><a href="./contact.html">Contact</a></li>
                </ul>
                <!-- Social -->
                <p class="social-icon">
@@ -92,7 +92,7 @@
             <div class="flexslider js-fullheight">
                <!-- Social -->
                <ul class="list-unstyled ml-5 mt-3 position-relative social-links">
-                  <li class="mb-3"><a id="modeToggle" style="cursor: pointer;"><i class="fa-solid fa-sun" style="color: #ffffff;"></i></a></li>
+                  <li class="mb-3"><a id="modeToggle" style="cursor: pointer;"><i class="fa-solid fa-moon" style="color: #ffffff;"></i></a></li>
                   <li class="mb-3"><a href="https://www.facebook.com/mekadariya"><i class="fab fa-facebook-f"></i></a></li>
                   <li class="mb-3"><a href="https://www.github.com/suyogkad"><i class="fab fa-github"></i></a></li>
                   <li class="mb-3"><a href="https://www.linkedin.com/in/suyog-kadariya"><i class="fab fa-dribbble"></i></a></li>
@@ -100,12 +100,12 @@
                </ul>
                <!-- Slider -->
                <ul class="slides">
-                  <li style="background-image: url(./images/coverup_slide_1.png);">
+                  <li style="background-image: url(../images/coverup_slide_1.png);">
                      <div class="overlay-gradient"></div>
                      <div class="container">
                         <div class="col-md-8 js-fullheight slider-text">
                            <div class="slider-text-inner">
-                              <div class="desc">
+                             <div class="desc">
                                  <h2>I'm Suyog Kadariya</h2>
                                  <h3>I am a
                                     <span id="typed-slide-1"></span>
@@ -120,7 +120,7 @@
                         </div>
                      </div>
                   </li>
-                  <li style="background-image: url(./images/coverup_slide_1.png);">
+                  <li style="background-image: url(../images/coverup_slide_1.png);">
                      <div class="overlay-gradient"></div>
                      <div class="container">
                         <div class="col-md-8 js-fullheight slider-text">
@@ -172,7 +172,7 @@
                      <div class="work-gallery"> 
                         <div class="col-lg-6 col-md-6 col-sm-12 all graphics">
                            <div class="work">
-                              <img class="img-fluid" src="images/logo_black.png" alt="">
+                              <img class="img-fluid" src="../images/logo_black.png" alt="">
                               <div class="desc">
                                  <div class="con">
                                     <h3><a href="work-single.html">Work 1</a></h3>
@@ -183,7 +183,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 all web ui mobile">
                            <div class="work">
-                              <img class="img-fluid" src="images/tab_cbz_black.png" alt="">
+                              <img class="img-fluid" src="../images/tab_cbz_black.png" alt="">
                               <div class="desc">
                                  <div class="con">
                                     <h3><a href="work-single.html">Work 2</a></h3>
@@ -194,7 +194,7 @@
                         </div>          
                         <div class="col-lg-6 col-md-6 col-sm-12 all mobile ui">
                            <div class="work">
-                              <img class="img-fluid" src="images/mob_bnw_hurl.png" alt="">
+                              <img class="img-fluid" src="../images/mob_bnw_hurl.png" alt="">
                               <div class="desc">
                                  <div class="con">
                                     <h3><a href="work-single.html">Work 3</a></h3>
@@ -205,7 +205,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 all mobile ui">
                            <div class="work">
-                              <img class="img-fluid" src="images/web_blacn_nea.png" alt="">
+                              <img class="img-fluid" src="../images/web_blacn_nea.png" alt="">
                               <div class="desc">
                                  <div class="con">
                                     <h3><a href="work-single.html">Work 4</a></h3>
@@ -216,7 +216,7 @@
                         </div>            
                         <div class="col-lg-6 col-md-6 col-sm-12 all graphics">
                            <div class="work">
-                              <img class="img-fluid" src="images/flyer_black.png" alt="">
+                              <img class="img-fluid" src="../images/flyer_black.png" alt="">
                               <div class="desc">
                                  <div class="con">
                                     <h3><a href="work-single.html">Work 5</a></h3>
@@ -227,10 +227,10 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 all graphics">
                            <div class="work">
-                              <img class="img-fluid" src="images/swan_black1.png" alt="">
+                              <img class="img-fluid" src="../images/swan_black1.png" alt="">
                               <div class="desc">
                                  <div class="con">
-                                    <h3><a href="work-single.html">Work 6</a></h3>
+                                    <h3><a href="./work-single.html">Work 6</a></h3>
                                     <span>Graphics Design</span>
                                  </div>
                               </div>
@@ -245,28 +245,28 @@
          </section>
          <!-- End Works Section -->
 
-         <!-- script to turn into light mode -->
-         <script type="text/javascript">
-            document.getElementById("modeToggle").addEventListener("click", function() {
-                let currentURL = window.location.href;
-                let splitURL = currentURL.split('/');
-                let file = splitURL[splitURL.length - 1];
-                if (currentURL.includes('/light/')) {
-                    window.location.href = currentURL.replace('/light/', '/');  // switch to dark mode
-                } else {
-                    window.location.href = currentURL.replace(file, 'light/' + file);  // switch to light mode
-                }
-            });
-        </script>
+                  <!-- script to turn into light mode -->
+                  <script type="text/javascript">
+                     document.getElementById("modeToggle").addEventListener("click", function() {
+                         let currentURL = window.location.href;
+                         let splitURL = currentURL.split('/');
+                         let file = splitURL[splitURL.length - 1];
+                         if (currentURL.includes('/light/')) {
+                             window.location.href = currentURL.replace('/light/', '/');  // switch to dark mode
+                         } else {
+                             window.location.href = currentURL.replace(file, 'light/' + file);  // switch to light mode
+                         }
+                     });
+                 </script>
 
-        <!-- Footer -->
+         <!-- Footer -->
         <footer>
          <div id="footer">
             <div class="container">
                <div class="row copy-right">
                   <div class="col-md-6 col-md-offset-3 text-center">
                      <!-- Footer logo -->
-                     <h2><a class="footer-logo" href="index.html">kadariya</a></h2>
+                     <h2><a class="footer-logo" href="./index.html">kadariya</a></h2>
                      <!-- Social -->
                      <p class="social-icon">
                         <a href="https://www.facebook.com/mekadariya"><i class="fab fa-facebook-square"></i></a>
@@ -283,29 +283,29 @@
          <!-- Back to top button -->
          <a id="back-to-top" href="#"><i class="fas fa-chevron-up"></i></a>
       </footer>
-      <!-- End Footer -->
-   </div>
-   <!-- jQuery -->
-   <script src="js/jquery.min.js"></script>
-   <!-- jQuery Easing -->
-   <script src="js/jquery.easing.1.3.js"></script>
-   <!-- Bootstrap -->
-   <script src="js/bootstrap.min.js"></script>
-   <!-- Waypoints -->
-   <script src="js/jquery.waypoints.min.js"></script>
-   <!-- Counters -->
-   <script src="js/jquery.countTo.js"></script>
-   <!-- Flexslider -->
-   <script src="js/jquery.flexslider-min.js"></script>
-   <!-- isotope js -->
-   <script src="js/isotope.pkgd.min.js"></script>
-   <!-- isotope image loader js -->
-   <script src="js/imagesloaded.pkgd.min.js"></script>
-   <!-- Typed -->
-   <script src="js/typed.min.js"></script>
-   <!-- Custom JS -->
-   <script src="js/custom.js"></script>
-</body>
+         <!-- End Footer -->
+      </div>
+      <!-- jQuery -->
+      <script src="js/jquery.min.js"></script>
+      <!-- jQuery Easing -->
+      <script src="js/jquery.easing.1.3.js"></script>
+      <!-- Bootstrap -->
+      <script src="js/bootstrap.min.js"></script>
+      <!-- Waypoints -->
+      <script src="js/jquery.waypoints.min.js"></script>
+      <!-- Counters -->
+      <script src="js/jquery.countTo.js"></script>
+      <!-- Flexslider -->
+      <script src="js/jquery.flexslider-min.js"></script>
+      <!-- isotope js -->
+      <script src="js/isotope.pkgd.min.js"></script>
+      <!-- isotope image loader js -->
+      <script src="js/imagesloaded.pkgd.min.js"></script>
+      <!-- Typed -->
+      <script src="js/typed.min.js"></script>
+      <!-- Custom JS -->
+      <script src="js/custom.js"></script>
+   </body>
 
-<!-- work.html  26 Nov 2019 03:53:59 GMT -->
+<!-- work.html  26 Nov 2019 03:55:04 GMT -->
 </html>
