Dark/Night Mode Feature Added

--- a/public/light/academics.html
+++ b/public/light/academics.html
@@ -92,7 +92,7 @@
          <div class="flexslider js-fullheight">
             <!-- Social -->
             <ul class="list-unstyled ml-5 mt-3 position-relative social-links">
-               <li class="mb-3"><a id="modeToggle" style="cursor: pointer;"><i class="fa-solid fa-sun" style="color: #ffffff;"></i></a></li>
+               <li class="mb-3"><a id="modeToggle" style="cursor: pointer;"><i class="fa-solid fa-moon" style="color: #ffffff;"></i></a></li>
                <li class="mb-3"><a href="https://www.facebook.com/mekadariya"><i class="fab fa-facebook-f"></i></a></li>
                <li class="mb-3"><a href="https://www.github.com/suyogkad"><i class="fab fa-github"></i></a></li>
                <li class="mb-3"><a href="https://www.linkedin.com/in/suyog-kadariya"><i class="fab fa-dribbble"></i></a></li>
@@ -100,7 +100,7 @@
             </ul>
             <!-- Slider -->
             <ul class="slides">
-               <li style="background-image: url(images/coverup_slide_1.png);">
+               <li style="background-image: url(../images/coverup_slide_1.png);">
                   <div class="overlay-gradient"></div>
                   <div class="container">
                      <div class="col-md-8 js-fullheight slider-text">
@@ -120,7 +120,7 @@
                      </div>
                   </div>
                </li>
-               <li style="background-image: url(images/coverup_slide_1.png);">
+               <li style="background-image: url(../images/coverup_slide_1.png);">
                   <div class="overlay-gradient"></div>
                   <div class="container">
                      <div class="col-md-8 js-fullheight slider-text">
@@ -163,7 +163,7 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="blog">
-                              <img class="img-responsive" src="images/chinese.png" alt=""></a>
+                              <img class="img-responsive" src="../images/chinese.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2014</span>
                                  <h3>CHINESE LANGUAGE</h3>
@@ -173,7 +173,7 @@
                         </div>
                         <div class="col-md-12">
                            <div class="blog">
-                              <img class="img-responsive" src="images/plane.png" alt=""></a>
+                              <img class="img-responsive" src="../images/plane.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2019</span>
                                  <h3>BUILDING A RC PLANE</h3>
@@ -187,7 +187,7 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="blog">
-                              <img class="img-responsive" src="images/tuki.png" alt=""></a>
+                              <img class="img-responsive" src="../images/tuki.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2017</span>
                                  <h3>TUKI ORGANIZING COMMITTEE</h3>
@@ -197,7 +197,7 @@
                         </div>
                         <div class="col-md-12">
                            <div class="blog">
-                              <img class="img-responsive" src="images/speech.png" alt=""></a>
+                              <img class="img-responsive" src="../images/speech.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2019</span>
                                  <h3>SPEECH AT IT PARK, NEPAL</h3>
@@ -211,7 +211,7 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="blog">
-                              <img class="img-responsive" src="images/drone.png" alt=""></a>
+                              <img class="img-responsive" src="../images/drone.png" alt=""></a>
                               <div class="blog-text">
                                  <span class="posted_on">2018</span>
                                  <h3>BUILDING A DRONE</h3>
@@ -221,7 +221,7 @@
                         </div>
                         <div class="col-md-12">
                            <div class="blog">
-                              <img class="img-responsive" src="images/logo_black.png" alt=""></a>
+                              <img class="img-responsive" src="../images/logo_black.png" alt=""></a>
                              <div class="blog-text">
                                  <span class="posted_on">2019</span>
                                  <h3>FIRST CLIENT PROJECT</h3>
